--- a/app/src/main/res/layout/consegna_layout.xml
+++ b/app/src/main/res/layout/consegna_layout.xml
@@ -1,198 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/home"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <ScrollView
+    <ImageView
+        android:id="@+id/copertina"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <LinearLayout
+        android:id="@+id/linearLayoutInfiLibro"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/copertina">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/titolo1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/home"
-            android:orientation="vertical"
-            android:paddingVertical="20dp">
+            android:fontFamily="monospace"
+            android:text="TITOLO"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"></LinearLayout>
+        <TextView
+            android:id="@+id/autore"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:text="Autore"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
-            <androidx.constraintlayout.widget.Barrier
-                android:id="@+id/divider"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/annop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:text="Anno pubblicazione"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
-            <ImageView
-                android:id="@+id/copertina"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider"
-                tools:srcCompat="@tools:sample/avatars" />
+        <TextView
+            android:id="@+id/genere"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:text="Genere"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
-            <LinearLayout
-                android:id="@+id/linearLayoutInfiLibro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="vertical"
-                android:paddingHorizontal="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/copertina">
+    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/titolo1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="monospace"
-                    android:text="TITOLO"
-                    android:textColor="#FFFFFF"
-                    android:textSize="34sp"
-                    android:textStyle="bold" />
+    <LinearLayout
+        android:id="@+id/linearLayoutConsegna"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
+        android:gravity="left"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInfiLibro">
 
-                <TextView
-                    android:id="@+id/autore"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="monospace"
-                    android:text="Autore"
-                    android:textColor="#FFFFFF"
-                    android:textSize="30sp" />
+        <EditText
+            android:id="@+id/codice"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/edit_text_draw"
+            android:hint="codice"
+            android:inputType="text"
+            android:paddingLeft="5dp"
+            android:textAlignment="viewStart"
+            android:textColor="#FFFFFF"
+            android:textColorHighlight="#FFDF36"
+            android:textColorHint="#8A8686"
+            android:textSize="16sp"
+            tools:ignore="TouchTargetSizeCheck" />
 
-                <TextView
-                    android:id="@+id/annop"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="monospace"
-                    android:text="Anno pubblicazione"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" />
+        <Button
+            android:id="@+id/buttonConsegna"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:background="@drawable/green_button"
+            android:backgroundTint="@color/text"
+            android:text="Consegna"
+            tools:ignore="TouchTargetSizeCheck" />
 
-                <TextView
-                    android:id="@+id/genere"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="monospace"
-                    android:text="Genere"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20dp" />
+    </LinearLayout>
 
-            </LinearLayout>
+    <LinearLayout
+        android:id="@+id/LinearLayoutPosticipa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
+        android:gravity="left"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutConsegna">
 
-            <LinearLayout
-                android:id="@+id/linearLayoutConsegna"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayoutInfiLibro">
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="Vuoi posticipare la consegna?"
+            android:textColor="#FFFFFF" />
 
-                <EditText
-                    android:id="@+id/codice"
-                    android:layout_width="150dp"
-                    android:layout_height="30dp"
-                    android:layout_marginHorizontal="15dp"
-                    android:background="@drawable/edit_text_draw"
-                    android:hint="codice"
-                    android:inputType="text"
-                    android:paddingLeft="5dp"
-                    android:textAlignment="viewStart"
-                    android:textColor="#FFFFFF"
-                    android:textColorHighlight="#FFDF36"
-                    android:textColorHint="#8A8686"
-                    android:textSize="16sp"
-                    tools:ignore="TouchTargetSizeCheck" />
+        <Button
+            android:id="@+id/buttonPosticipa"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/green_button"
+            android:backgroundTint="@color/text"
+            android:text="Posticipa"
+            tools:ignore="TouchTargetSizeCheck" />
+    </LinearLayout>
 
-                <Button
-                    android:id="@+id/buttonConsegna"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/green_button"
-                    android:backgroundTint="@color/text"
-                    android:text="Consegna"
-                    tools:ignore="TouchTargetSizeCheck" />
+    <LinearLayout
+        android:id="@+id/LinearLayoutValutazione"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/LinearLayoutPosticipa">
 
-            </LinearLayout>
+        <TextView
+            android:id="@+id/textValutazione"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lascia una valutazione"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp" />
 
-            <LinearLayout
-                android:id="@+id/LinearLayoutPosticipa"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginVertical="20dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayoutConsegna">
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:isIndicator="false"
+            android:numStars="5"
+            android:progressBackgroundTint="#D2D2D2"
+            android:progressTint="#FBE236"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Vuoi posticipare la consegna?"
-                    android:textColor="#FFFFFF" />
+        <Button
+            android:id="@+id/buttonVota"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginVertical="10dp"
+            android:background="@drawable/green_button"
+            android:text="Vota"
+            tools:ignore="TouchTargetSizeCheck" />
+    </LinearLayout>
 
-                <Button
-                    android:id="@+id/buttonPosticipa"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:layout_marginHorizontal="10dp"
-                    android:background="@drawable/green_button"
-                    android:backgroundTint="@color/text"
-                    android:text="Posticipa"
-                    tools:ignore="TouchTargetSizeCheck" />
-            </LinearLayout>
+</LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/LinearLayoutValutazione"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/LinearLayoutPosticipa">
-
-                <TextView
-                    android:id="@+id/textValutazione"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Lascia una valutazione"
-                    android:textColor="#FFFFFF"
-                    android:textSize="30sp" />
-
-                <RatingBar
-                    android:id="@+id/ratingBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:isIndicator="false"
-                    android:numStars="5"
-                    android:progressBackgroundTint="#D2D2D2"
-                    android:progressTint="#FBE236"
-                    tools:ignore="SpeakableTextPresentCheck" />
-
-                <Button
-                    android:id="@+id/buttonVota"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/green_button"
-                    android:text="Vota"
-                    tools:ignore="TouchTargetSizeCheck" />
-            </LinearLayout>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
